Rename of folders completed (by now)